force-app/main/default/objects/Account/fields/A1__c.field-meta.xml
<CustomField>
    <fullName>A1__c</fullName>
    <label>A1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>