force-app/main/default/objects/Account/fields/Check_Total__c.field-meta.xml
<CustomField>
    <fullName>Check_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Check Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>