force-app/main/default/objects/Account/fields/insert__c.field-meta.xml
<CustomField>
    <fullName>insert__c</fullName>
    <formula>IF( CreatedDate  =  LastModifiedDate , &apos;Insert&apos;, &apos;Update&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>insert</label>
    <type>Text</type>
</CustomField>