force-app/main/default/objects/Account/fields/inspect__c.field-meta.xml
<CustomField>
    <fullName>inspect__c</fullName>
    <label>inspect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>