force-app/main/default/objects/Account/fields/No_of_opportunities__c.field-meta.xml
<CustomField>
    <fullName>No_of_opportunities__c</fullName>
    <label>No of opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>