force-app/main/default/objects/Account/fields/Out_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Business</label>
    <type>Checkbox</type>
</CustomField>