force-app/main/default/objects/Account/fields/Prevent_Check__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Check</label>
    <type>Checkbox</type>
</CustomField>