force-app/main/default/objects/Account/validationRules/Account_Number_Is_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Is_Numeric</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(AccountNumber )   ||  NOT(ISNUMBER( AccountNumber ) ) ||  LEN( AccountNumber )  &lt;= 7</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>Enter proper Account Number with more that 7 digits</errorMessage>
</ValidationRule>