force-app/main/default/objects/Account/validationRules/Check_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_total</fullName>
    <active>true</active>
    <errorConditionFormula>Check_Total__c  &gt; 100</errorConditionFormula>
    <errorMessage>Can&apos;t be that much</errorMessage>
</ValidationRule>