force-app/main/default/objects/Account/validationRules/Contact_must_be_in_Account_ZIP_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_in_Account_ZIP_Code</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Contact__c )  ||   Contact__r.MailingPostalCode  &lt;&gt;  ShippingPostalCode</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>enter correct code</errorMessage>
</ValidationRule>