force-app/main/default/objects/Account/validationRules/Date_Must_Be_in_the_Current_Year.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Must_Be_in_the_Current_Year</fullName>
    <active>false</active>
    <errorConditionFormula>YEAR( SLAExpirationDate__c )  &lt;&gt;  YEAR( TODAY() )</errorConditionFormula>
    <errorDisplayField>SLAExpirationDate__c</errorDisplayField>
    <errorMessage>Same current year needs to be given</errorMessage>
</ValidationRule>