force-app/main/default/objects/Account/validationRules/Out_of_Business.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_of_Business</fullName>
    <active>false</active>
    <errorConditionFormula>Prevent_Check__c == True  &amp;&amp;  Out_of_Business__c == True</errorConditionFormula>
    <errorDisplayField>Out_of_Business__c</errorDisplayField>
    <errorMessage>An open Opportunity is still there on this account</errorMessage>
</ValidationRule>