force-app/main/default/objects/Account/validationRules/rounding.validationRule-meta.xml
<ValidationRule>
    <fullName>rounding</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue  &gt;11.99</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>can&apos;t be man</errorMessage>
</ValidationRule>